@@ -1,3 +1,8 @@
+Mon Nov 17 00:39:14 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_wait): Mangle return value into a value
+	  suitable for passing to exit (Debian bug #477305).
+
 Mon Nov 17 00:06:28 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	Make bare .so includes (i.e. ".so foo.1" rather than ".so
